--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "mobx-react-devtools": "^6.1.1",
-    "node-sass": "^4.12.0",
     "postcss": "^7.0.16",
     "react-hot-loader": "^4.8.4",
     "resolve-url-loader": "^3.1.1",
+    "sass": "^1.32.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-jest": "^24.0.2",
