Added new docker tag to the container built in the all_non_versioned_push workflow

--- a/.github/workflows/all_non_versioned_push.yaml
+++ b/.github/workflows/all_non_versioned_push.yaml
@@ -36,5 +36,5 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: agoracloud/ui:${{ steps.extract_branch_name.outputs.branch_name }}-${{ steps.extract_commit_short_sha.outputs.commit_short_sha }}
+          tags: agoracloud/ui:${{ steps.extract_branch_name.outputs.branch_name }}-latest,agoracloud/ui:${{ steps.extract_branch_name.outputs.branch_name }}-${{ steps.extract_commit_short_sha.outputs.commit_short_sha }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
