--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "mobx-persist": "^0.4.1",
     "mobx-react": "^6.1.1",
     "mobx-react-router": "^4.0.7",
+    "notistack": "^1.0.3",
     "qs": "^6.9.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
