#28 finished implementation of create workspace functionality, user can create workspaces now

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "jsx": "react",
     "module": "es6",
     "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "declaration": false,
     "removeComments": true,
