--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agoracloud_ui",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "description": "AgoraClouds UI",
   "author": "AgoraCloud",
   "private": true,
@@ -66,6 +66,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "reflect-metadata": "^0.1.13"
   }
 }
