--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@monaco-editor/react": "^4.1.0",
     "@types/jest": "^24.0.15",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
@@ -61,11 +62,13 @@
     "mobx-persist": "^0.4.1",
     "mobx-react": "^6.1.1",
     "mobx-react-router": "^4.0.7",
+    "monaco-editor": "^0.23.0",
     "notistack": "^1.0.3",
     "plotly.js": "^1.58.4",
     "qs": "^6.9.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-markdown": "^5.0.3",
     "react-plotly.js": "^2.5.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.1.2",
