--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agoracloud_ui",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "AgoraClouds UI",
   "author": "AgoraCloud",
   "private": true,
@@ -54,18 +54,22 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@monaco-editor/react": "^4.1.0",
     "@types/jest": "^24.0.15",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "events": "^3.3.0",
     "mobx": "^5.11.0",
     "mobx-persist": "^0.4.1",
     "mobx-react": "^6.1.1",
     "mobx-react-router": "^4.0.7",
+    "monaco-editor": "^0.23.0",
     "notistack": "^1.0.3",
     "plotly.js": "^1.58.4",
     "qs": "^6.9.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-markdown": "^5.0.3",
     "react-plotly.js": "^2.5.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.1.2",
