--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
+    "@lourenci/react-kanban": "^2.1.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
