--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "start": "webpack-dev-server --mode development --hot --progress --colors --port 3000 --open",
     "build": "webpack -p --progress --colors",
-    "format": "prettier --write \"src/**/*.{ts,tsx,css}\""
+    "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -27,9 +28,13 @@
     "@types/react-dom": "^16.9.13",
     "@types/react-router": "^5.1.14",
     "@types/webpack": "^4.41.29",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "babel-loader": "^8.0.6",
     "base-href-webpack-plugin": "^2.0.0",
     "css-loader": "^2.1.1",
+    "eslint": "^7.28.0",
+    "eslint-plugin-react": "^7.24.0",
     "file-loader": "^3.0.1",
     "html-loader": "^1.0.0-alpha.0",
     "html-webpack-plugin": "^3.2.0",
