--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "webpack-dev-server --mode development --hot --progress --colors --port 3000 --open",
     "build": "webpack -p --progress --colors",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -38,6 +39,7 @@
     "file-loader": "^3.0.1",
     "html-loader": "^1.0.0-alpha.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^6.0.0",
     "jest": "^24.8.0",
     "mobx-react-devtools": "^6.1.1",
     "postcss": "^7.0.16",
