--- a/package.json
+++ b/package.json
@@ -8,78 +8,51 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "webpack-dev-server --mode development --hot --progress --colors --port 3000 --open",
-    "build": "webpack -p --progress --colors",
+    "dev": "vite",
+    "build": "tsc && vite build",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix",
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-decorators": "^7.14.2",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.14.2",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/preset-typescript": "^7.13.0",
-    "@hot-loader/react-dom": "^16.8.6",
+    "@types/jest": "^24.0.15",
+    "@types/react-beautiful-dnd": "^13.0.0",
+    "@types/styled-components": "^5.1.9",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
     "@types/classnames": "^2.3.1",
     "@types/node": "^12.20.13",
-    "@types/react": "^16.14.7",
-    "@types/react-dom": "^16.9.13",
     "@types/react-router": "^5.1.14",
-    "@types/webpack": "^4.41.29",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
-    "babel-loader": "^8.0.6",
-    "base-href-webpack-plugin": "^2.0.0",
-    "css-loader": "^2.1.1",
     "eslint": "^7.28.0",
     "eslint-plugin-react": "^7.24.0",
-    "file-loader": "^3.0.1",
-    "html-loader": "^1.0.0-alpha.0",
-    "html-webpack-plugin": "^3.2.0",
     "husky": "^6.0.0",
     "jest": "^24.8.0",
-    "mobx-react-devtools": "^6.1.1",
-    "postcss": "^7.0.16",
     "prettier": "2.3.1",
     "react-hot-loader": "^4.8.4",
     "resolve-url-loader": "^3.1.3",
-    "sass": "^1.34.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.0",
-    "typescript": "^3.9.9",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.31.0",
-    "webpack-cleanup-plugin": "^0.5.1",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1"
+    "typescript": "^3.9.9"
   },
   "dependencies": {
     "@agoracloud/common": "^1.2.0",
-    "@lourenci/react-kanban": "^2.1.0",
+    "@mars-man/models": "^1.1.5",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@monaco-editor/react": "^4.1.3",
-    "@types/jest": "^24.0.15",
-    "@types/react-beautiful-dnd": "^13.0.0",
-    "@types/styled-components": "^5.1.9",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "events": "^3.3.0",
-    "mobx": "^5.11.0",
-    "mobx-persist": "^0.4.1",
+    "mobx": "^5.9.4",
     "mobx-react": "^6.1.1",
     "mobx-react-router": "^4.0.7",
+    "react": "^17.0.0",
     "monaco-editor": "^0.23.0",
     "notistack": "^1.0.9",
     "plotly.js": "^1.58.4",
     "qs": "^6.10.1",
-    "react": "^16.8.6",
     "react-beautiful-dnd": "^13.1.0",
     "react-dnd": "^9.4.0",
     "react-dnd-html5-backend": "^9.4.0",
@@ -88,8 +61,8 @@
     "react-plotly.js": "^2.5.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.1.2",
-    "react-trello": "^2.0.0",
     "reflect-metadata": "^0.1.13",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "vite": "^2.5.7"
   }
 }
