--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,27 @@
 {
   "compilerOptions": {
-    "sourceMap": true,
-    "target": "es5",
-    "jsx": "react",
-    "module": "es6",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "declaration": false,
-    "removeComments": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noImplicitAny": false,
-    "strict": true,
-    "outDir": "build",
-    "lib": ["es6", "es7", "dom","dom.iterable"],
-    "downlevelIteration": true,
-    "rootDir": "src",
-    "baseUrl": "src",
+    "target": "ESNext",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "allowJs": false,
+    "skipLibCheck": false,
+    "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
-    "strictPropertyInitialization" : false,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react",
+    "experimentalDecorators" : true,
+    "noImplicitAny" : false,
+    "rootDir": "./src/",
+    "baseUrl": "./src/",
     "paths": {
       "app/*": ["./app/*"],
-      "react-dom": ["@hot-loader/react-dom"],
       "@styles/*" : ["./app/styles/*"]
     }
   },
-  "exclude": ["build", "node_modules"]
+  "include": ["./src/**/*"]
 }
