--- a/package.json
+++ b/package.json
@@ -1,54 +1,18 @@
 {
-  "name": "agoracloud_ui",
-  "version": "1.0.0",
-  "description": "AgoraClouds UI",
-  "author": "AgoraCloud",
-  "private": true,
-  "license": "MIT",
-  "main": "index.js",
+  "version": "0.0.0",
   "scripts": {
-    "test": "jest",
     "dev": "vite",
     "build": "tsc && vite build",
-    "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix",
-    "prepare": "husky install"
-  },
-  "devDependencies": {
-    "@types/jest": "^24.0.15",
-    "@types/react-beautiful-dnd": "^13.0.0",
-    "@types/styled-components": "^5.1.9",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
-    "@types/classnames": "^2.3.1",
-    "@types/node": "^12.20.13",
-    "@types/react-router": "^5.1.14",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
-    "eslint": "^7.28.0",
-    "eslint-plugin-react": "^7.24.0",
-    "husky": "^6.0.0",
-    "jest": "^24.8.0",
-    "prettier": "2.3.1",
-    "react-hot-loader": "^4.8.4",
-    "resolve-url-loader": "^3.1.3",
-    "typescript": "^3.9.9"
+    "serve": "vite preview"
   },
   "dependencies": {
     "@agoracloud/common": "^1.2.0",
     "@mars-man/models": "^1.1.5",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
     "@monaco-editor/react": "^4.1.3",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "events": "^3.3.0",
-    "mobx": "^5.9.4",
-    "mobx-react": "^6.1.1",
     "mobx-react-router": "^4.0.7",
-    "react": "^17.0.0",
     "monaco-editor": "^0.23.0",
     "notistack": "^1.0.9",
     "plotly.js": "^1.58.4",
@@ -56,13 +20,45 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dnd": "^9.4.0",
     "react-dnd-html5-backend": "^9.4.0",
-    "react-dom": "^16.8.6",
     "react-markdown": "^5.0.3",
     "react-plotly.js": "^2.5.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.1.2",
     "reflect-metadata": "^0.1.13",
     "styled-components": "^5.3.0",
-    "vite": "^2.5.7"
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "lodash": "^4.17.21",
+    "mobx": "^5.9.4",
+    "mobx-react": "^6.1.1",
+    "react": "^17.0.0",
+    "react-color": "^2.19.3",
+    "react-color-palette": "^5.0.0",
+    "react-dom": "^17.0.0"
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.3.1",
+    "@types/jest": "^24.0.15",
+    "@types/lodash": "^4.14.171",
+    "@types/node": "^15.14.2",
+    "@types/react": "^17.0.14",
+    "@types/react-beautiful-dnd": "^13.0.0",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router": "^5.1.14",
+    "@types/styled-components": "^5.1.9",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "@vitejs/plugin-react-refresh": "^1.3.5",
+    "eslint": "^7.28.0",
+    "eslint-plugin-react": "^7.24.0",
+    "husky": "^6.0.0",
+    "jest": "^24.8.0",
+    "prettier": "2.3.1",
+    "sass": "^1.41.0",
+    "typescript": "^4.3.5",
+    "vite": "^2.4.2"
   }
 }
