--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "skipLibCheck": false,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
-    "strict": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
     "moduleResolution": "Node",
@@ -23,5 +23,5 @@
       "@styles/*" : ["./app/styles/*"]
     }
   },
-  "include": ["./src/**/*"]
+  "include": ["./src"]
 }
