--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "sourceMap": true,
+    "declaration": false,
+    "removeComments": true,
+    "strictPropertyInitialization": false,
     "jsx": "react",
     "experimentalDecorators" : true,
     "noImplicitAny" : false,
+    "outDir": "build",
     "rootDir": "./src/",
     "baseUrl": "./src/",
     "paths": {
