--- a/package.json
+++ b/package.json
@@ -10,44 +10,44 @@
     "start": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
-    "test" : "jest",
+    "test": "jest",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix",
     "prepare": "husky install"
   },
   "dependencies": {
     "@agoracloud/common": "^1.2.0",
-    "@mars-man/models": "^1.1.5",
+    "@mars-man/models": "^1.2.0",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@monaco-editor/react": "^4.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "events": "^3.3.0",
+    "lodash": "^4.17.21",
+    "mobx": "^5.9.4",
+    "mobx-react": "^6.1.1",
     "mobx-react-router": "^4.0.7",
     "monaco-editor": "^0.23.0",
     "notistack": "^1.0.9",
     "plotly.js": "^1.58.4",
     "qs": "^6.10.1",
+    "react": "^17.0.0",
     "react-beautiful-dnd": "^13.1.0",
+    "react-color": "^2.19.3",
+    "react-color-palette": "^5.0.0",
     "react-dnd": "^9.4.0",
     "react-dnd-html5-backend": "^9.4.0",
+    "react-dom": "^17.0.0",
     "react-markdown": "^5.0.3",
     "react-plotly.js": "^2.5.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.1.2",
     "reflect-metadata": "^0.1.13",
-    "styled-components": "^5.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
-    "@material-ui/core": "^4.12.1",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
-    "lodash": "^4.17.21",
-    "mobx": "^5.9.4",
-    "mobx-react": "^6.1.1",
-    "react": "^17.0.0",
-    "react-color": "^2.19.3",
-    "react-color-palette": "^5.0.0",
-    "react-dom": "^17.0.0"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.3.1",
