--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "jest",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@agoracloud/common": "^1.2.0",
@@ -62,6 +63,7 @@
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "@vitejs/plugin-react-refresh": "^1.3.5",
+    "cypress": "^8.4.1",
     "eslint": "^7.28.0",
     "eslint-plugin-react": "^7.24.0",
     "husky": "^6.0.0",
