--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "@agoracloud/common": "^1.2.0",
-    "@mars-man/models": "^1.2.0",
+    "@mars-man/events": "^1.0.0",
+    "@mars-man/models": "^1.2.1",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -26,7 +27,6 @@
     "@typescript-eslint/parser": "^4.26.1",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
-    "events": "^3.3.0",
     "lodash": "^4.17.21",
     "mobx": "^5.9.4",
     "mobx-react": "^6.1.1",
@@ -50,10 +50,11 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@originjs/vite-plugin-commonjs": "^1.0.0",
     "@types/classnames": "^2.3.1",
     "@types/jest": "^24.0.15",
     "@types/lodash": "^4.14.171",
-    "@types/node": "^15.14.2",
+    "@types/node": "^15.14.9",
     "@types/react": "^17.0.14",
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^17.0.9",
