--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@monaco-editor/react": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
+    "chance": "^1.1.8",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "events": "^3.3.0",
