--- a/cypress/fixtures/project.json
+++ b/cypress/fixtures/project.json
@@ -1,15 +1,28 @@
 {
+    "global": {
+        "labelName": "Name",
+        "labelDescription": "Description",
+        "nameErrMessage": "name must be longer than or equal to 4 characters",
+        "improperName": "TP-"
+    },
     "greeting": "Projects",
-    "tableHeader1": "Name",
-    "tableHeader2": "Description",
     "testProjectId": "6177650e689e2c00191626b0",
     "testProjectName": "TProject",
     "testProjectDescription": "This is the description of TProject",
     "editBtnText": "Edit",
     "deleteBtnText": "Delete",
     "deleteDiaglogGreeting": "Confirm Delete",
-    "createProjectGreeting": "Create Project",
-    "createProjectBtnText": "Create",
-    "createProjectNameErr": "name must be longer than or equal to 4 characters"
+    "create": {
+        "greeting": "Create Project",
+        "createBtnText": "Create",
+        "newProjectName": "TP-1",
+        "newProjectDescription": "This is TP-1's description"
+    },
+    "edit": {
+        "greeting": "Edit Project",
+        "saveBtnText": "Save",
+        "newProjectName": "TP-1-EDIT",
+        "newProjectDescription": "This is TP-1's description-EDIT"
+    } 
 }
   
