--- a/.github/workflows/pr_checks.yaml
+++ b/.github/workflows/pr_checks.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Set Up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "12"
+          node-version: '14'
       - name: Install Dependencies
         run: npm ci
       - name: Build
@@ -26,7 +26,7 @@ jobs:
       - name: Set Up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "12"
+          node-version: '14'
       - name: Install Dependencies
         run: npm ci
       - name: Test
