--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "test": "jest",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@agoracloud/common": "^1.3.0",
     "@mars-man/components": "^1.0.1",
-    "@mars-man/events": "^1.0.3",
-    "@mars-man/models": "^1.3.15",
+    "@mars-man/events": "^1.0.1",
+    "@mars-man/models": "^1.3.14",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -49,6 +50,7 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^2.0.0",
     "@types/classnames": "^2.3.1",
     "@types/jest": "^24.0.15",
     "@types/node": "^15.14.9",
@@ -61,6 +63,7 @@
     "@typescript-eslint/parser": "^4.26.1",
     "@vitejs/plugin-react": "^1.0.4",
     "@vitejs/plugin-react-refresh": "^1.3.5",
+    "cypress": "^8.7.0",
     "eslint": "^7.28.0",
     "eslint-plugin-react": "^7.24.0",
     "husky": "^6.0.0",
